polish html titles and links

--- a/src/cocopp/static/pprldflex.html
+++ b/src/cocopp/static/pprldflex.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width" />
-	<title>Runtime Profiles</title>
+	<title>Runtime Profiles (former ECDFs)</title>
 	<script src="pprldflex-config.js"></script>
 	<script src="pprldflex.js"></script>
 	<link rel="stylesheet" href="pprldflex.css">
 </head>
 <body>
 <div id="header">
-	<h2>Runtime profiles (ECDFs)</h2>
+	<h2>Runtime profiles (former ECDFs)</h2>
 	<div id="controls">
 		<select id="type">
 			<option name="dimension">per dimension</option>
