[flex-navigation] change per_dimension to all_functions

--- a/src/cocopp/static/pprldflex.html
+++ b/src/cocopp/static/pprldflex.html
@@ -13,7 +13,7 @@
 	<h2>Runtime profiles (former ECDFs)</h2>
 	<div id="controls">
 		<select id="type">
-			<option name="dimension">per dimension</option>
+			<option name="dimension">all functions</option>
 			<option name="function" >per function</option>
 			<option name="single"   >single plot</option>
 		</select>
